src/styles/typography.scss
@use 'variables' as *;

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-weight: 700;
}

h1 {
  color: darken($goldenrod, 10%);
  font-size: $font-size-5;
  margin-bottom: $padding-md;
  letter-spacing: -0.04em;
}

h2 {
  font-size: $font-size-3;
  color: $mako;
  line-height: 1.3em;
  margin-bottom: $padding-md;
  letter-spacing: -0.04em;

  > span {
    display: block;
    color: $bandicoot;
    font-weight: 300;
    font-size: 0.8rem;
    margin: -9px 0 -6px;
  }

  &.subtitle {
    margin-top: -10px;
  }
}

h3 {
  font-size: $font-size-2;
  color: $mako;
  line-height: 1.3em;
  letter-spacing: -0.04em;
  margin-bottom: -3px;

  > span {
    display: block;
    color: $bandicoot;
    font-weight: 300;
    font-size: $font-size-0;
  }

  > strong {
    position: relative;
    display: inline-block;
    font-weight: 500;

    &:before {
      position: absolute;
      content: '';
      display: block;
      background: rgba($alto, 0.75);
      top: 40%;
      left: 9px;
      width: 100%;
      height: 60%;
      z-index: -1;
    }
  }
}

h4 {
  font-size: $font-size-1;
  line-height: 1.45em;
  margin-bottom: $padding-sm;
}

h5 {
  font-size: $font-size-0;
  line-height: 1.45em;
}

p {
  font-weight: 300;
  font-size: $font-size-0;
  color: $ironside;
  line-height: 1.45em;
  margin: 0 0 $padding-lg;

  strong {
    font-weight: 700;
  }

  &.intro {
    font-size: $font-size-1;
    margin: 0 0 $padding-lg;

    &:after {
      content: '...';
      font-size: $font-size-3;
      display: block;
      text-align: center;
      letter-spacing: 1em;
      margin: $padding-md 0 $padding-lg;
    }
  }
}

